static/sass/_pattern_navigation.scss
@import "./breakpoints";

.p-panel__logo-image {
  height: 2.5rem;
}

/* logo should be flush with the top of the window */
.l-navigation,
.l-navigation-bar {
  .p-panel {
    padding-bottom: 1rem;
    padding-top: 0;
  }

  @include mobile {
    .p-panel__logo {
      margin-top: 0;
    }
  }

  @include desktop {
    .p-panel__logo {
      margin-top: -3px;
    }
  }

  .align-with-logo {
    margin-right: -$sph--small;
    padding-top: $spv--small;
  }
}

.l-navigation-bar {
  .p-panel__logo {
    margin-bottom: 0;
    margin-top: -10px;
  }
}

@include mobile {
  .l-navigation {
    transition-duration: 0s !important;
  }
}

@include desktop {
  /* switch out the image in the collapsed view to hide partially visibly text */
  .p-panel__logo-image {
    content: url("static/assets/img/logo/containers-no-text.svg");
    height: 3rem;
  }

  .l-navigation.is-pinned {
    grid-area: nav;
    position: static;

    .p-panel__logo-image {
      content: url("static/assets/img/logo/containers.svg");
    }
  }
}

.l-navigation.is-collapsed:focus-within {
  transform: translateX(-100%);
}

@include desktop {
  .l-navigation.is-collapsed,
  .l-navigation.is-collapsed:focus-within,
  .l-navigation.is-collapsed:hover {
    transform: translateX(0);
    width: 4rem;
  }
}

.sidenav-top-ul::after {
  display: none;
}

.sidenav-bottom-ul {
  bottom: $spv--x-large;
  position: absolute;
  width: 15rem;
}

.sidenav-toggle {
  background-color: #444 !important;
  bottom: $spv--large;
  position: absolute;
  right: $sph--large;
}

.l-navigation.is-collapsed .sidenav-toggle {
  rotate: 180deg;
}

.p-side-navigation__item--title {
  white-space: nowrap;
}

